--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"babel-loader": "^6.2.4",
 		"babel-preset-es2015": "^6.9.0",
 		"babel-preset-react": "^6.11.1",
+		"clipboard": "^1.5.12",
 		"typescript": "^1.8.10",
 		"typings": "^1.3.2",
 		"webpack": "^1.13.1",
