--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
 		"build": "webpack --optimize-minimize --bail"
 	},
 	"dependencies": {
-		"awesome-typescript-loader": "^2.1.0",
 		"babel": "^6.5.2",
 		"babel-core": "^6.11.4",
 		"babel-loader": "^6.2.4",
 		"babel-preset-es2015": "^6.9.0",
 		"babel-preset-react": "^6.11.1",
 		"clipboard": "^1.5.12",
+		"ts-loader": "^0.8.2",
 		"typescript": "^1.8.10",
 		"typings": "^1.3.2",
 		"webpack": "^1.13.1",
