--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"babel-preset-es2015": "^6.9.0",
 		"babel-preset-react": "^6.11.1",
 		"clipboard": "^1.5.12",
+		"json-loader": "^0.5.4",
+		"raven-js": "^3.3.0",
 		"ts-loader": "^0.8.2",
 		"typescript": "^2.0.0",
 		"typings": "^1.3.2",
